# Tello-Python

./: .gitattributes  .gitignore  MINEYUKIIIIIIIIIIIII.txt  README.md  TODO.md  TelloPython_FAQ(CH).txt  TelloPython_FAQ.txt  guide.docx  new_test_file.py  tello_control_ui.py  tello_state.py  test.txt
Single_Tello_Test/: README.md  command.txt  flight_test.txt  sample.py  stats.py  tello.py  tello_test.py
Single_Tello_Test/log/: 2019-10-28 21:48:56.873150.txt
SystemPJ/: main.py  tello.py
SystemPJ/ProcessVoice/: main_from_alexa.py  speak.py  test_sub.py
SystemPJ/rec_human/: approach.py  approachModule.py  defaultModule.py  moving_method.py
Tello-CV-face/: main.py  tello.py
Tello-battery/: main.py
Tello_Video/: tello.py  tello_control_ui.py
Tello_Video(With_Pose_Recognition)/: README.md  main.py  tello_control_ui.py
Tello_Video(With_Pose_Recognition)/h264decoder/: h264decoder.hpp
Tello_Video/h264decoder/: CMakeLists.txt  h264decoder.cpp  readme.md
Tello_Video_With_Pose_Recognition/: LICENSE.md  README.md  main.py  tello.py  tello_control_ui.py  tello_pose.py
Tello_Video_With_Pose_Recognition/h264decoder/: CMakeLists.txt  h264decoder_python.cpp
Tello_Video_With_Pose_Recognition/h264decoder/Windows/x86/: libh264decoder.pyd
Tello_Video_With_Pose_Recognition/img/: readme.md
Tello_Video_new/: README.md  tello.py  tello_control_ui.py
alexa-to-tellopython/: lambda_function.py
aws/: iotclient.py  main.py
h264decoder/: h264decoder.hpp  readme.md
openpose/: openpose.py
tello_video_dll(ForWin64)/: libh264decoder.pyd
(+24 files in other folders)
